[package]
name = "audio-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "unsync_server"
path = "src/unsync_main.rs"

[[bin]]
name = "convert"
path = "src/convert.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
tokio = { version = "1.45.1", features = ["net", "macros", "rt-multi-thread", "sync", "time", "io-util"] }
hound = "3.5.1"
bytemuck = "1.23.1"
scanf = "1.3.1"
base64 = "0.22.1"
